--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ before_install:
 jobs:
   include:
     - stage: "Build"                # naming the Tests stage
-      name: "Unit Tests"            # names the first Tests stage job
-      script: gradlew build
+      name: "Main"            # names the first Tests stage job
+      script: ./gradlew build
     - stage: "Test"                # naming the Tests stage
       name: "Unit Tests"            # names the first Tests stage job
-      script: gradlew test
+      script: ./gradlew test
