--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,22 @@ dependencies {
     implementation  'org.jblas:jblas:1.2.4'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
+    implementation 'org.antlr:antlr-runtime:3.5.2'
+    compile group: 'org.json', name: 'json', version: '20180813'
+
+
+    //simya
+    compile fileTree(dir: 'lib', include: 'ssj-2.5.jar')
+    compile group: 'org.sbml.jsbml', name: 'jsbml', version: '1.2'
+    compile group: 'colt', name: 'colt', version: '1.2.0'
+    compile group: 'org.apache.commons', name: 'commons-math', version: '2.2'
+    compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
+    compile group: 'org.jdesktop', name: 'appframework', version: '1.0.3'
+    compile group: 'com.github.yannrichet', name: 'JMathPlot', version: '1.0.1'
+    compile group: 'com.itextpdf', name: 'itextpdf', version: '5.5.12'
+    compile group: 'net.sf.squirrel-sql.thirdparty.non-maven', name: 'java-cup', version: '11a'
+    compile group: 'org.jfree', name: 'jfreechart', version: '1.0.19'
+
 }
 
 jacocoTestReport {
