--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,8 @@ test {
 }
 dependencies {
     api 'org.apache.commons:commons-math3:3.6.1'
-    implementation  'org.jblas:jblas:1.2.4'
+    api 'org.antlr:antlr4-runtime:4.7.2'
+    implementation 'org.jblas:jblas:1.2.4'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
 }
