--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ test {
     useJUnitPlatform()
 }
 dependencies {
+    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     api 'org.apache.commons:commons-math3:3.6.1'
     api 'org.antlr:antlr4-runtime:4.7.2'
     implementation 'org.jblas:jblas:1.2.4'
