--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 }
 
 jar {
-    archiveName "$baseName.$extension"
+    archiveName "eggloop.$extension"
     manifest{
         attributes 'Main-Class': 'io.github.eggloop.application.Eggloop'
     }
