--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ test {
 }
 dependencies {
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+    compile group: 'org.apache.commons.io', name: 'commonsIO', version: '2.5.0'
     api 'org.apache.commons:commons-math3:3.6.1'
     api 'org.antlr:antlr4-runtime:4.7.2'
     implementation 'org.jblas:jblas:1.2.4'
