#9 [partial] [spider] minorfix + run configurations and gitignore mod

--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,15 @@
 */build/**/*
 */build/*
 */bin/*
-.idea/
 */out/*
-.idea/*
 *.project
 out/*
 *.asv
-*/.idea/*
 build/
 .gradle/
+/scripts/output/
+
+.idea/modules
+.idea/shelf
+.idea/sonarlint
+.idea/*.*
