--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ test {
 }
 
 dependencies {
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     compile group: 'org.apache.commons.io', name: 'commonsIO', version: '2.5.0'
     api 'org.apache.commons:commons-math3:3.6.1'
