--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     compile group: 'org.apache.commons.io', name: 'commonsIO', version: '2.5.0'
+    compile group: 'me.tongfei', name: 'progressbar', version: '0.7.4'
     api 'org.apache.commons:commons-math3:3.6.1'
     api 'org.antlr:antlr4-runtime:4.7.2'
     implementation 'org.jblas:jblas:1.2.4'
